<resources>
    <string name="app_name">MyProject_Android</string>
    <string name="action_distance">거리</string>
    <string name="title_activity_food">식단</string>
    <string name="title_activity_main">메인화면</string>

    <string name="action_whatIEat">식단</string>
    <string name="action_park">주변공원</string>
    <string name="action_etc">기타</string>
    <string name="title_activity_show_section">걸은 구간 검색</string>
    <string name="title_activity_recordsection">걸은 구간 검색</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_service">service</string>
    <string name="action_home">메인화면</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_etc">내정보 및 음식등록</string>
    <string name="title_activity_park">공원검색</string>
    <string name="title_activity_pmaps">공원검색</string>
    <string name="google_maps_key">AIzaSyA4odzu6wTwvnJieZ6su7vFDO2Ndraf4pI</string>
</resources>
