<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/actionHome"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionDistance"
        android:orderInCategory="101"
        android:title="@string/action_distance"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionWhatIEat"
        android:orderInCategory="102"
        android:title="@string/action_whatIEat"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionPark"
        android:orderInCategory="103"
        android:title="@string/action_park"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionEtc"
        android:orderInCategory="104"
        android:title="@string/action_etc"
        app:showAsAction="never" />
</menu>